<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_sin">sin</string>
    <string name="button_cos">cos</string>
    <string name="button_tan">tan</string>
    <string name="button_pai">π</string>
    <string name="button_ln">ln</string>
    <string name="button_log">log</string>
    <string name="button_e">e</string>
    <string name="button_index">^</string>
    <string name="button_delete">del</string>
    <string name="button_negation">!</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
     <string name="button_6">6</string>
      <string name="button_7">7</string>
       <string name="button_8">8</string>
        <string name="button_9">9</string>
         <string name="button_0">0</string>
          <string name="button_plus">+</string>
           <string name="button_sub">-</string>
            <string name="button_mul">×</string>
                <string name="button_div">÷</string>
                 <string name="button_euqal">=</string>
                  <string name="button_digi">.</string>
                   <string name="button_left">(</string>
                     <string name="button_right">)</string>
                     
                     <color name="color_white">#ffffff</color>
                    
            

</resources>
