<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.calculator.MainActivity" >

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
          
            android:id="@+id/linearlayout11"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center" >
            <EditText 
                android:id="@+id/edittext1"
                android:background="@drawable/white_bg"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:editable="false"
                android:layout_gravity="right|bottom"
               
                />
        </LinearLayout>
        

        <LinearLayout
            android:id="@+id/linearlayout12"
            android:orientation="vertical"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#abcdef"
             >
            <LinearLayout 
                android:layout_width="300dp"
                android:id="@+id/linearlayout121"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <Button 
                    android:id="@+id/button_sin"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_sin"
                    
                    />
                 <Button 
                     android:id="@+id/button_cos"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_cos"
                    
                    />
                  <Button 
                    android:id="@+id/button_tan"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_tan"
                    
                    />
                   <Button 
                    android:id="@+id/button_pai"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_pai"
                    
                    />
                    <Button
                    android:id="@+id/button_negation"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_negation"
                    
                    />
                
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/linearlayout122" 
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:orientation="horizontal"
                
                >
                <Button 
                    android:id="@+id/button_ln"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_ln"/>
                
                <Button
                    android:id="@+id/button_log"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_log"/>
                
                 <Button
                     android:id="@+id/button_e" 
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_e"/>
                 
                  <Button
                      android:id="@+id/button_index" 
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_index"/>
                  
                  <Button 
                      android:id="@+id/button_delete"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_delete"/>
                
            </LinearLayout>
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/linearlayout13" 
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:orientation="vertical" >
            
            <LinearLayout
                 android:id="@+id/linearlayout131" 
                android:orientation="horizontal"
                android:layout_width="300dp"
                android:layout_height="60dp" >
                  <Button
                       android:id="@+id/button_7" 
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_7"/>
                  <Button
                       android:id="@+id/button_8" 
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_8"/>
                  <Button 
                       android:id="@+id/button_9"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_9"/>
                  <Button 
                       android:id="@+id/button_divi"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_div"/>
                  <Button 
                       android:id="@+id/button_left"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_left"/>

             </LinearLayout>
            
            <LinearLayout
                 android:id="@+id/linearlayout132" 
                android:layout_width="300dp"
                android:layout_height="60dp" 
                  android:orientation="horizontal">
                   <Button
                       android:id="@+id/button_4" 
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_4"/>
                  <Button
                       android:id="@+id/button_5" 
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_5"/>
                  <Button 
                       android:id="@+id/button_6"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_6"/>
                  <Button 
                       android:id="@+id/button_mul"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_mul"/>
                  <Button 
                       android:id="@+id/button_right"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/button_right"/>

            </LinearLayout>
            
            <LinearLayout
                 android:id="@+id/linearlayout133" 
                android:layout_width="300dp"
                android:layout_height="180dp" >

                <LinearLayout
                     android:id="@+id/linearlayout1331" 
                    android:layout_width="240dp"
                    android:layout_height="match_parent" 
                    android:orientation="vertical">
                    
                    <LinearLayout 
                        android:id="@+id/linearlayout13311"
                        android:layout_width="240dp"
                        android:layout_height="60dp"
                        android:orientation="horizontal">
                        <Button 
                             android:id="@+id/button_1"
                             android:layout_width="60dp"
                             android:layout_height="match_parent"
                             android:text="@string/button_1"/>
                        <Button 
                             android:id="@+id/button_2"
                             android:layout_width="60dp"
                             android:layout_height="match_parent"
                             android:text="@string/button_2"/>
                        <Button 
                             android:id="@+id/button_3"
                             android:layout_width="60dp"
                             android:layout_height="match_parent"
                             android:text="@string/button_3"/>
                           <Button 
                             android:id="@+id/button_sub"
                             android:layout_width="60dp"
                             android:layout_height="match_parent"
                             android:text="@string/button_sub"/>
                        
                        
                     </LinearLayout>
                     
                     <LinearLayout 
                        android:id="@+id/linearlayout13312"
                        android:layout_width="240dp"
                        android:layout_height="120dp"
                        android:orientation="horizontal">
                            <Button 
                                   android:id="@+id/button_0"
                                   android:layout_width="120dp"
                                   android:layout_height="120dp"
                                   android:text="@string/button_0"/>
                    
                            <Button
                                android:id="@+id/button_digit"
                                android:layout_width="60dp"
                                android:layout_height="match_parent"
                                android:text="@string/button_digi"/>
                            <Button
                                android:id="@+id/button_plus"
                                android:layout_width="60dp"
                                android:layout_height="match_parent"
                                android:text="@string/button_plus"/>
         
                     </LinearLayout>"
                    

                </LinearLayout>
                <LinearLayout
                     android:id="@+id/linearlayout1332" 
                    android:layout_width="60dp"
                    android:layout_height="180dp" 
                    android:orientation="horizontal">
                     <Button 
                         android:id="@+id/button_equal"
                         android:layout_width="fill_parent"
                         android:layout_height="match_parent"
                         android:text="@string/button_euqal"
                         />
             

                </LinearLayout>
                
                
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
       
</RelativeLayout>
